create a cv page

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,7 +32,7 @@
         <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ author.email }}</li>
       {% endif %}
       {% if author.cv %}
-        <li><a href="{{ author.cv }}" target="_blank"><i class="fas fa-fw fa-file" aria-hidden="true"></i> curriculum vitae</a></li>
+        <li><a href="{{ author.cv }}" target="_blank"><i class="fas fa-fw fa-file" aria-hidden="true"></i> curriculum vitae (PDF)</a></li>
       {% endif %}
       {% if author.keybase %}
         <li><a href="https://keybase.io/{{ author.keybase }}"><i class="fas fa-fw fa-key" aria-hidden="true"></i> Keybase</a></li>
