--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -41,7 +41,7 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
-  font-family: $georgia;
+  font-family: $palatino;
 
   a + a {
     opacity: 0.5;
