--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -12,7 +12,7 @@
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
   color: #fff !important;
-  font-family: $georgia;
+  font-family: $palatino;
   font-size: $type-size-6;
   font-weight: bold;
   text-align: center;
