--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,11 +26,12 @@ $georgia                    : Georgia, serif;
 $times                      : Times, serif;
 $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
-$garamond                   : Garamond, serif;
+$garamond                   : Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
+$palatino                   : Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
 
-$global-font-family         : $georgia;
-$header-font-family         : $georgia;
-$caption-font-family        : $georgia;
+$global-font-family         : $palatino;
+$header-font-family         : $palatino;
+$caption-font-family        : $palatino;
 
 /* type scale */
 $type-size-1                : 2.441em;  // ~39.056px
@@ -57,14 +58,14 @@ $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : black;
 $border-color               : $lighter-gray;
 
 $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #54575C;
 
 /* brands */
 $behance-color              : #1769FF;
@@ -93,7 +94,7 @@ $xing-color                 : #006567;
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $primary-color;
+$masthead-link-color        : black;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
 
 
