--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -93,11 +93,11 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin: 2em 1em 2em 0;
+  margin: 0em 2em 0em 2em;
   padding-left: 1em;
   padding-right: 1em;
-  font-style: italic;
-  border-left: 0.25em solid $primary-color;
+  // font-style: italic;
+  border-left: 0.15em solid slategray;
 
   cite {
     font-style: italic;
