--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,10 +32,10 @@
       <li><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> {{ author.email }}</li>
       {% endif %}
       {% if author.googlescholar %}
-      <li><a href="{{ author.googlescholar }}" target="_blank"><i class="fa fa-fw fa-search"></i> Google Scholar</a></li>
+      <li><a href="{{ author.googlescholar }}" target="_blank"><i class="fa fa-fw fa-search" style="color:#4285F4;"></i> Google Scholar</a></li>
       {% endif %}
       {% if author.orcid %}
-      <li><a href="{{ author.orcid }}" target="_blank"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
+      <li><a href="{{ author.orcid }}" target="_blank"><i class="ai ai-orcid ai-fw" style="color:#A6CE39;"></i> ORCID</a></li>
       {% endif %}
       {% if author.uri %}
         <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].website_label | default: "Website" }}</a></li>
@@ -50,7 +50,7 @@
         <li><a href="{{ author.researchgate }}"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i> ResearchGate</a></li>
       {% endif %}
       {% if author.twitter %}
-        <li><a href="https://twitter.com/{{ author.twitter }}" target="_blank"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+        <li><a href="https://twitter.com/{{ author.twitter }}" target="_blank"><i class="fab fa-fw fa-twitter" aria-hidden="true"></i></i> Twitter</a></li>
       {% endif %}
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
