add collection of data sources

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,8 +54,8 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
+$body-color                 : #F5F5F5;
+$background-color           : #F5F5F5;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : black;
@@ -91,12 +91,12 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : black;
-$link-color-hover           : mix(#000, $link-color, 25%);
-$link-color-visited         : mix(#fff, $link-color, 25%);
+$link-color                 : #4682B4;
+$link-color-hover           : mix(#000, $link-color, 25%) !default;
+$link-color-visited         : mix(#fff, $link-color, 15%) !default;
 $masthead-link-color        : black;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
-
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
+$navicon-link-color-hover   : mix(#fff, $primary-color, 75%) !default;
 
 /*
    Breakpoints
