--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,16 +25,16 @@ h1, h2, h3, h4, h5, h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
   font-family: $header-font-family;
-  font-weight: bold;
+  font-weight: 550;
 }
 
 h1 {
   margin-top: 0;
-  font-size: $type-size-3;
+  font-size: $type-size-4;
 }
 
 h2 {
-  font-size: $type-size-4;
+  font-size: $type-size-5;
 }
 
 h3 {
