--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -16,7 +16,8 @@
     @include clearfix;
     padding: 1em 1em 1em;
     font-family: $palatino;
-    font-weight: bold;
+    font-size: $type-size-6;
+    font-weight: normal;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
